# airvpn-rs

./: .gitignore  CLAUDE.md  Cargo.toml  EDDIE_REFERENCE.md
.claude/plans/: humble-meandering-sphinx.md  replace-wgquick-with-direct-wg.md  snoopy-conjuring-metcalfe.md
docs/: known_divergences.md  security_model.md
docs/plans/: 2026-02-27-persistent-lock-design.md  2026-02-27-persistent-lock-impl.md  2026-02-28-gui-design.md  2026-02-28-refactoring-design.md  2026-02-28-refactoring-impl.md  2026-03-02-gui-m2-design.md  2026-03-02-gui-m2-impl.md  2026-03-02-socket-activation-design.md  2026-03-02-socket-activation-impl.md  2026-03-03-dns-leak-fix-design.md  2026-03-03-single-control-plane-design.md  2026-03-03-single-control-plane-impl.md  2026-03-05-background-pinger-plan.md  2026-03-05-gui-m3-planned-fixes.md  2026-03-05-http-ipc-design.md  2026-03-05-http-ipc-impl.md  2026-03-07-proactive-manifest-design.md  2026-03-07-proactive-manifest-impl.md  2026-03-10-ui-overhaul-design.md  2026-03-10-ui-overhaul-impl.md
resources/: airvpn-gui.desktop  airvpn-helper.service  airvpn-helper.socket  org.airvpn.helper.policy  provider.json
scripts/: README.md  chaos-test.sh  eddie-compare.sh  install.sh  leak-monitor.sh  rule-diff.sh  test-ping-allow.sh  test-ping-routing.sh
src/: api.rs  cli_client.rs  common.rs  config.rs  connect.rs  countries.rs  crypto.rs  dns.rs  helper.rs  http.rs  ipc.rs  ipv6.rs  lib.rs  main.rs  manifest.rs  netlock.rs  options.rs  pinger.rs  profile.rs  recovery.rs  server.rs  verify.rs  wireguard.rs
src/gui/: ipc.rs  main.rs  theme.rs
src/gui/views/: logs.rs  mod.rs  overview.rs  servers.rs  settings.rs
tests/: adversarial-tier3.sh  integration.rs  robustness-tier2.sh  robustness.sh
