[package]
name = "airvpn"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["blocking"] }

# Crypto (API envelope)
rsa = "0.9"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
toml = "0.8"

# Unix / system
nix = { version = "0.29", features = ["signal", "process", "fs"] }
rpassword = "7"

# Keyring (v2s mode)
secret-service = { version = "5", features = ["rt-async-io-crypto-rust"] }

# Hashing (netlock SHA-256 comment tags)
hex = "0.4"

# Temp files (netlock ruleset loading)
tempfile = "3"

# Error handling
anyhow = "1"
