[package]
name = "airvpn"
version = "0.1.0"
edition = "2021"

[lib]
name = "airvpn"
path = "src/lib.rs"

[[bin]]
name = "airvpn"
path = "src/main.rs"

[[bin]]
name = "airvpn-gui"
path = "src/gui/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["blocking"] }

# Crypto (API envelope)
rsa = "0.9"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }

# Unix / system
nix = { version = "0.29", features = ["signal", "process", "fs", "user"] }
rpassword = "7"

# Zeroize sensitive key material on drop
zeroize = { version = "1", features = ["derive"] }

# Hashing (netlock SHA-256 comment tags)
hex = "0.4"

# Temp files (netlock ruleset loading)
tempfile = "3"

# Logging
log = "0.4"
simplelog = "0.12"

# Error handling
anyhow = "1"
pbkdf2 = "0.12"
sha1 = "0.10"

# GUI
iced = { version = "0.14", features = ["tokio"] }
